@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.92-3
 LastCRAN: 0.92-2 on 2014-11-22
-Date: 2014-12-09
+Date: 2014-12-11
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
